Configuration parameters names refactoring